feat: implement comprehensive content validation system and brand styling
- Add automated link validation and content quality scripts
- Create CI workflow for content validation on push/PR
- Implement HeyZack brand colors and custom CSS styling
- Add new performance metrics and ROI analysis templates
- Update documentation with under/over terminology consistency

--- a/src/content/docs/advertising/ad-copy-variations.mdx
+++ b/src/content/docs/advertising/ad-copy-variations.mdx
@@ -240,7 +240,7 @@ sidebar:
 **Facebook/Instagram:**
 - Aspect ratios: 16:9, 1:1, 9:16
 - Duration: 15-60 seconds
-- File size: <4GB
+- File size: under 4GB
 
 **YouTube:**
 - Pre-roll: 16:9, 15-30 seconds
