--- a/src/content/docs/campaign-core/landing-page-copy.mdx
+++ b/src/content/docs/campaign-core/landing-page-copy.mdx
@@ -30,14 +30,14 @@ To bring HeyZack to life, we need to fund our first major production run. Your s
 ## 🗺️ Table of Contents
 
 * [The Problem](#the-problem)
-* [The Solution](#the-solution)
+* [The Solution](#the-solution-heyzack)
 * [How It Works](#how-it-works)
-* [What's Inside](#whats-inside)
+* [What's Inside](#whats-inside-the-heyzack-starter-kit)
 * [Meet the Devices](#meet-the-devices)
 * [Automation Playbook](#automation-playbook)
-* [Pledge Tiers](#pledge-tiers)
+* [Pledge Tiers](#pledge-tiers-perks)
 * [Our Story](#our-story)
-* [Risks & Challenges](#risks--challenges)
+* [Risks & Challenges](#risks-challenges)
 
 ---
 
