--- a/src/content/docs/visual-assets/visual-asset-checklist.mdx
+++ b/src/content/docs/visual-assets/visual-asset-checklist.mdx
@@ -17,12 +17,12 @@ sidebar:
   - Product showcase in premium home setting
   - Family interaction with voice commands
   - Call-to-action overlay
-  - **Specs**: 1920x1080, MP4, <50MB
+  - **Specs**: 1920x1080, MP4, under 50MB
 
 - ✅ **Hero Image** (Backup/Mobile)
   - HeyZack hub in sophisticated living room
   - Warm, premium lighting
-  - **Specs**: 1920x1080, JPG/PNG, <2MB
+  - **Specs**: 1920x1080, JPG/PNG, under 2MB
 
 ### Product Showcase
 - ✅ **360° Product Views**
@@ -86,7 +86,7 @@ sidebar:
 - ✅ **Facebook Ad Images**
   - Recommended: 1200x628
   - Alternative: 1080x1080 (square)
-  - Minimal text overlay (<20%)
+  - Minimal text overlay (under 20%)
   - Clear product visibility
 
 - ✅ **Google Ads Display**
