docs: update documentation content and styling
- Rename "templates" to "resources" throughout documentation
- Improve heading hierarchy and formatting
- Add Inter font family and typography system
- Enhance UI components styling (cards, badges, tabs)
- Improve dark mode support for all components

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,11 +5,11 @@ description: Your Complete Crowdfunding Campaign System
 
 import { Card, CardGrid, Badge, LinkCard, Aside, Icon } from '@astrojs/starlight/components';
 
-## Your Complete Crowdfunding Campaign System
+Your Complete Crowdfunding Campaign System
 
 ---
 
-## 🎯 QUICK START NAVIGATION
+🎯 **QUICK START NAVIGATION**
 
 ### 👤 Choose Your Role
 
@@ -25,9 +25,9 @@ import { Card, CardGrid, Badge, LinkCard, Aside, Icon } from '@astrojs/starlight
   <Card title="✍️ Content Creator" icon="pencil">
     Writing copy, scripts, and messaging for all campaign stages
     
-    **Start Here:** [Content Templates](/campaign-core/)
+    **Start Here:** [Content Resources](/campaign-core/)
     
-    <Badge text="Templates" variant="note" />
+    <Badge text="Resources" variant="note" />
   </Card>
   
   <Card title="📊 Campaign Manager" icon="rocket">
@@ -57,7 +57,7 @@ import { Card, CardGrid, Badge, LinkCard, Aside, Icon } from '@astrojs/starlight
   <Card title="🚀 All-in-One" icon="open-book">
     Complete campaign system for solo entrepreneurs
     
-    **Start Here:** [All Resources](/templates-master/template-collection/)
+    **Start Here:** [All Resources](/resources-master/resource-collection/)
     
     <Badge text="Complete" variant="default" />
   </Card>
@@ -90,9 +90,9 @@ journey
 
 ---
 
-## 📚 MAIN SECTIONS
+📚 **MAIN SECTIONS**
 
-### 🎯 Strategy Foundation
+**🎯 Strategy Foundation**
 **Start here for campaign planning and positioning**
 
 <Aside type="tip" title="Campaign Success Starts Here">
@@ -159,7 +159,7 @@ journey
   </Card>
 </CardGrid>
 
-### 🌊 Campaign Flows
+**🌊 Campaign Flows**
 **Visual diagrams and journey mapping**
 
 <Aside type="note" title="Campaign Journey Overview">
@@ -208,11 +208,11 @@ graph TD
   />
 </CardGrid>
 
-### ✍️ Content Templates
+**✍️ Content Resources**
 **Ready-to-customize copy and scripts**
 
 <Aside type="caution" title="Content Strategy">
-  All templates are optimized for the three-stage campaign approach. Customize messaging for your specific audience and product.
+  All resources are optimized for the three-stage campaign approach. Customize messaging for your specific audience and product.
 </Aside>
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
@@ -272,7 +272,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
       
       <LinkCard
         title="Stage-Specific Scripts"
-        description="Targeted video content templates for each campaign stage and audience"
+        description="Targeted video content resources for each campaign stage and audience"
         href="/campaign-core/video-script-templates"
       />
     </CardGrid>
@@ -301,7 +301,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
   </TabItem>
 </Tabs>
 
-### 🎨 Visual Systems
+**🎨 Visual Systems**
 **Asset creation and brand consistency**
 
 <Aside type="tip" title="Brand Consistency">
@@ -328,13 +328,13 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
   />
   
   <LinkCard
-    title="Infographic Templates"
-    description="Data visualization designs and infographic templates for campaign storytelling"
+    title="Infographic Resources"
+        description="Data visualization designs and infographic resources for campaign storytelling"
     href="/visual-assets/infographic-templates"
   />
 </CardGrid>
 
-### 🚀 Execution Playbooks
+**🚀 Execution Playbooks**
 **Implementation and optimization guides**
 
 <Aside type="danger" title="Campaign Execution">
@@ -349,7 +349,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
   />
   
   <LinkCard
-    title="Project Management Templates"
+    title="Project Management Resources"
     description="Team coordination tools and workflow management systems for campaign execution"
     href="/project-management/project-management-templates"
   />
@@ -361,13 +361,13 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
   />
   
   <LinkCard
-    title="Master Template Collection"
-    description="Complete toolkit with all templates and resources for comprehensive campaign management"
-    href="/templates-master/template-collection"
+    title="Master Resource Collection"
+    description="Complete toolkit with all resources and tools for comprehensive campaign management"
+    href="/resources-master/resource-collection"
   />
 </CardGrid>
 
-### 📊 Analytics & Tracking
+**📊 Analytics & Tracking**
 **Performance measurement and optimization**
 
 <Aside type="note" title="Data-Driven Optimization">
@@ -392,7 +392,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
     
     <Badge text="Tracking" variant="caution" />
     
-    [View Template →](/strategic-analysis/campaign-analytics-template)
+    [View Resource →](/strategic-analysis/campaign-analytics-template)
   </Card>
   
   <Card title="ROI Calculator" icon="star">
@@ -432,7 +432,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
     
     <Badge text="Budget" variant="note" />
     
-    [View Template →](/project-management/budget-template)
+    [View Resource →](/project-management/budget-template)
   </Card>
 </CardGrid>
 
@@ -446,7 +446,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
   />
 </CardGrid>
 
-### 📚 Reference Library
+**📚 Reference Library**
 
 <Aside type="tip" title="Knowledge Base">
   Comprehensive reference materials, best practices, and troubleshooting resources to support your campaign success.
@@ -492,7 +492,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 | [Press Release](supporting-materials/press-release/) | Media outreach | PR campaign |
 | [Social Media Calendar](supporting-materials/social-media-content-calendar/) | Content scheduling | Social strategy |
 
-### 🧠 Strategic Analysis
+**🧠 Strategic Analysis**
 **High-level strategic planning and market analysis**
 
 | Resource | Content | Application |
@@ -501,7 +501,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 | [Go-to-Market Strategy](strategic-analysis/go-to-market-strategy-stage1-optimization/) | Market entry strategy | Launch planning |
 | [Porter's Five Forces](strategic-analysis/porters-five-forces-analysis/) | Competitive landscape | Market positioning |
 
-### 📁 Reference Materials
+**📁 Reference Materials**
 **Source documents and brand assets**
 
 | Resource | Content | Application |
@@ -510,7 +510,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 | [HeyZack Logo](reference-materials/logo/) | Official logo file | Asset usage |
 | [Business Context](reference-materials/ai-ready-business-context/) | AI system context | Technical reference |
 
-### 🛠️ Tools & Calculators
+**🛠️ Tools & Calculators**
 **Practical utilities for campaign planning**
 
 - [Pricing Calculator](supporting-materials/pricing-calculator/) - Revenue optimization
@@ -520,9 +520,9 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 ---
 
-## 🎯 QUICK START GUIDES
+🎯 **QUICK START GUIDES**
 
-### 🆕 New Campaign Setup (First Time Users)
+**🆕 New Campaign Setup (First Time Users)**
 1. **Foundation** (Day 1-2)
    - Review [David Chen persona](foundation/david-chen/)
 - Customize [Messaging Direction Summary](foundation/messaging-direction-summary/)
@@ -538,14 +538,14 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 - Adapt [Email Sequences](email-marketing/)
 - Modify [Video Scripts](campaign-core/video-script-templates/)
 
-### 🔄 Template Customization (Existing Users)
+**🔄 Resource Customization (Existing Users)**
 1. **Identify Stage**: Determine current campaign phase
 2. **Select Personas**: Choose relevant audience profiles
-3. **Customize Content**: Adapt templates to your product
+3. **Customize Content**: Adapt resources to your product
 4. **Cross-Reference**: Ensure consistency across materials
 5. **Test & Optimize**: Use analytics to refine approach
 
-### ⚡ Emergency Campaign Launch (Rapid Deployment)
+**⚡ Emergency Campaign Launch (Rapid Deployment)**
 1. **Hour 1**: Review [Quick Campaign Concepts](campaign-core/stage-specific-campaign-concepts/)
 2. **Hour 2-4**: Customize [Campaign Page Copy](campaign-core/campaign-page-copy-customized/)
 3. **Hour 5-6**: Adapt [Launch Email Sequence](email-marketing/launch-email-sequence/)
@@ -553,28 +553,28 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 ---
 
-## 🔍 SEARCH & NAVIGATION
+🔍 **SEARCH & NAVIGATION**
 
-### 📋 By Campaign Stage
+**📋 By Campaign Stage**
 - **🌱 Early Adopters (0-500)**: [Stage 1 Personas](foundation/stage1-early-adopters-personas/) | [Technical Content](campaign-core/stage-specific-campaign-concepts/#stage-1-early-adopters-smart-home-survivor-stories)
 - **🚀 Hype Cycle (500-1000+)**: [Stage 2 Personas](foundation/stage2-hype-cycle-personas/) | [Social Proof Content](campaign-core/stage-specific-campaign-concepts/#stage-2-hype-cycle-family-transformation-stories)
 - **✅ Validation (1500-2000+)**: [Stage 3 Personas](foundation/stage3-validation-personas/) | [Mainstream Content](campaign-core/stage-specific-campaign-concepts/#stage-3-validation-market-leadership-community)
 
-### 📋 By Content Type
+**📋 By Content Type**
 - **📝 Copy & Messaging**: [Campaign Pages](campaign-core/) | [Email Marketing](email-marketing/) | [Advertising](advertising/)
 - **🎬 Video & Visual**: [Video Scripts](campaign-core/video-script-templates/) | [Visual Assets](visual-assets/)
 - **📊 Strategy & Planning**: [Foundation](foundation/) | [Implementation](campaign-core/implementation-roadmap/)
 - **🔧 Tools & Utilities**: [Calculators](supporting-materials/) | [Checklists](visual-assets/visual-asset-checklist/)
 
-### 📋 By User Role
+**📋 By User Role**
 - **👨‍💼 Campaign Manager**: [Implementation Roadmap](campaign-core/implementation-roadmap/) | [Social Media Calendar](supporting-materials/social-media-content-calendar/)
-- **✍️ Content Writer**: [All Copy Templates](campaign-core/) | [Email Sequences](email-marketing/) | [Ad Copy](advertising/)
+- **✍️ Content Writer**: [All Copy Resources](campaign-core/) | [Email Sequences](email-marketing/) | [Ad Copy](advertising/)
 - **🎨 Creative Director**: [Visual Guidelines](foundation/brand-visual-identity-guide/) | [Visual Assets](visual-assets/)
 - **📊 Data Analyst**: [Pricing Calculator](supporting-materials/pricing-calculator/) | [Competitor Research](supporting-materials/competitor-research/)
 
 ---
 
-## 🏷️ TAG SYSTEM
+🏷️ **TAG SYSTEM**
 
 **#foundation** - Core strategy and positioning documents  
 **#personas** - Audience definition and targeting  
@@ -592,20 +592,20 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 ---
 
-## 📞 SUPPORT & RESOURCES
+📞 **SUPPORT & RESOURCES**
 
-### 🆘 Getting Help
-- **Template Questions**: Check related documents in same folder
+**🆘 Getting Help**
+- **Resource Questions**: Check related documents in same folder
 - **Strategy Guidance**: Start with [Three-Stage Strategy](campaign-core/three-stage-campaign-strategy/)
 - **Implementation Issues**: Refer to [Implementation Roadmap](campaign-core/implementation-roadmap/)
 - **Content Customization**: Use persona documents as reference
 
-### 🔄 Updates & Maintenance
+**🔄 Updates & Maintenance**
 - **Version Control**: Track changes in [Project Management](project-management/)
-- **Template Updates**: Monitor for new versions and improvements
-- **Performance Feedback**: Use analytics to inform template refinements
+- **Resource Updates**: Monitor for new versions and improvements
+- **Performance Feedback**: Use analytics to inform resource refinements
 
-### 🎓 Learning Resources
+**🎓 Learning Resources**
 - **Best Practices**: Review [Competitor Research](supporting-materials/competitor-research/)
 - **Case Studies**: Analyze HeyZack examples throughout templates
 - **Industry Insights**: Stay updated with crowdfunding trends and strategies
