--- a/src/content/docs/reference-materials/logo.mdx
+++ b/src/content/docs/reference-materials/logo.mdx
@@ -212,7 +212,7 @@ HeyZack_Logo/
 ## Technical Specifications
 
 ### SVG Logo (Recommended)
-```svg
+```xml
 <svg width="200" height="60" viewBox="0 0 200 60" xmlns="http://www.w3.org/2000/svg">
   <!-- HeyZack Logo SVG Code -->
   <text x="10" y="35" font-family="Arial, sans-serif" font-size="24" font-weight="bold" fill="#0066CC">
