feat(docs): add new guides and reference sections with enhanced styling
- Implement new campaign execution guides and reference materials sections
- Update badge styling and link card hover effects for better visual consistency
- Remove deprecated template master files after content migration verification
- Add brand color variables and gradient system for UI enhancements

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -11,55 +11,77 @@ Your Complete Crowdfunding Campaign System
 
 🎯 **QUICK START NAVIGATION**
 
-### 👤 Choose Your Role
+### 📚 Available Resources
 
 <CardGrid cols={2}>
-  <Card title="🎨 Campaign Strategist" icon="star">
-    Developing overall campaign approach and positioning
+  <Card title="🏗️ Foundation" icon="star">
+    Brand guidelines, personas, and strategic positioning
     
-    **Start Here:** [Strategy Foundation](/foundation/)
+    **Explore:** [Foundation Resources](/foundation/)
     
-    <Badge text="Foundation" variant="tip" />
+    <Badge text="Strategy" variant="tip" />
   </Card>
   
-  <Card title="✍️ Content Creator" icon="pencil">
-    Writing copy, scripts, and messaging for all campaign stages
+  <Card title="🎯 Campaign Core" icon="rocket">
+    Campaign strategies, copy templates, and video scripts
     
-    **Start Here:** [Content Resources](/campaign-core/)
+    **Explore:** [Campaign Resources](/campaign-core/)
     
-    <Badge text="Resources" variant="note" />
+    <Badge text="Campaigns" variant="note" />
   </Card>
   
-  <Card title="📊 Campaign Manager" icon="rocket">
-    Executing and optimizing live campaigns
+  <Card title="📧 Email Marketing" icon="mail">
+    Email sequences and templates for all campaign stages
     
-    **Start Here:** [Execution Playbooks](/supporting-materials/campaign-launch-playbook/)
+    **Explore:** [Email Templates](/email-marketing/)
     
-    <Badge text="Management" variant="caution" />
+    <Badge text="Email" variant="caution" />
   </Card>
   
-  <Card title="🎬 Visual Producer" icon="image">
-    Creating assets and visual content for campaigns
+  <Card title="📊 Advertising" icon="megaphone">
+    Ad copy variations and campaign-specific advertising content
     
-    **Start Here:** [Visual Systems](/visual-assets/)
+    **Explore:** [Ad Resources](/advertising/)
     
-    <Badge text="Creative" variant="success" />
+    <Badge text="Ads" variant="success" />
   </Card>
   
-  <Card title="📈 Data Analyst" icon="information">
-    Tracking and optimizing campaign performance
+  <Card title="🎨 Visual Assets" icon="image">
+    Design guidelines, templates, and visual production resources
     
-    **Start Here:** [Analytics & Tracking](/strategic-analysis/performance-tracking-template/)
+    **Explore:** [Visual Resources](/visual-assets/)
     
-    <Badge text="Analytics" variant="danger" />
+    <Badge text="Creative" variant="danger" />
   </Card>
   
-  <Card title="🚀 All-in-One" icon="open-book">
-    Complete campaign system for solo entrepreneurs
+  <Card title="🛠️ Supporting Materials" icon="tools">
+    Additional tools, research, and campaign support resources
     
-    **Start Here:** [All Resources](/templates-master/template-collection/)
+    **Explore:** [Support Tools](/supporting-materials/)
     
-    <Badge text="Complete" variant="default" />
+    <Badge text="Tools" variant="default" />
+  </Card>
+</CardGrid>
+
+---
+
+### 📖 Additional Resources
+
+<CardGrid cols={2}>
+  <Card title="📚 Execution Guides" icon="book">
+    Step-by-step guides for campaign planning and execution
+    
+    **Browse:** [Campaign Guides](/guides/)
+    
+    <Badge text="Guides" variant="tip" />
+  </Card>
+  
+  <Card title="📋 Reference Materials" icon="clipboard">
+    Technical specs, templates, and business context materials
+    
+    **Browse:** [Reference Library](/reference/)
+    
+    <Badge text="Reference" variant="note" />
   </Card>
 </CardGrid>
 
